test/corpus/jetbrains/c.txt
==================
CallWithManyClosures
==================

// COMPILATION_ERRORS

val a = f() {} {} {}
val a = f {} {} {}
val a = f {}
val a = f() {}
val a = (f) {} {} {}
val a = (f)() {} {} {}
val a = (f)<A>() {} {} {}

---

(source_file
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (call_expression
        (call_expression
          (simple_identifier)
          (call_suffix
            (value_arguments)
            (annotated_lambda
              (lambda_literal))))
        (call_suffix
          (annotated_lambda
            (lambda_literal))))
      (call_suffix
        (annotated_lambda
          (lambda_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (call_expression
        (call_expression
          (simple_identifier)
          (call_suffix
            (annotated_lambda
              (lambda_literal))))
        (call_suffix
          (annotated_lambda
            (lambda_literal))))
      (call_suffix
        (annotated_lambda
          (lambda_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (annotated_lambda
          (lambda_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (value_arguments)
        (annotated_lambda
          (lambda_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (call_expression
        (call_expression
          (parenthesized_expression
            (simple_identifier))
          (call_suffix
            (annotated_lambda
              (lambda_literal))))
        (call_suffix
          (annotated_lambda
            (lambda_literal))))
      (call_suffix
        (annotated_lambda
          (lambda_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (call_expression
        (call_expression
          (parenthesized_expression
            (simple_identifier))
          (call_suffix
            (value_arguments)
            (annotated_lambda
              (lambda_literal))))
        (call_suffix
          (annotated_lambda
            (lambda_literal))))
      (call_suffix
        (annotated_lambda
          (lambda_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (call_expression
        (call_expression
          (parenthesized_expression
            (simple_identifier))
          (call_suffix
            (type_arguments
              (type_projection
                (user_type
                  (type_identifier))))
            (value_arguments)
            (annotated_lambda
              (lambda_literal))))
        (call_suffix
          (annotated_lambda
            (lambda_literal))))
      (call_suffix
        (annotated_lambda
          (lambda_literal))))))

==================
CommentsBindingInLambda
==================

// COMPILATION_ERRORS

val la1 = {
    // start
    // start 1
    foo()

    // middle

    foo()

    // end
}

val la2 = {
    /**/
}

val la3 = {
    /** */
}

val la4 = {
    /** Should be under block */

    /** Should be under property */
    val some = 1
}

val la5 = {
    /** */
    /** */
}

val la6 = /*1*/ {/*2*/ a /*3*/ -> /*4*/
}

val la7 = {/**/}

fun foo() {}

---

(source_file
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (lambda_literal
      (line_comment)
      (line_comment)
      (statements
        (call_expression
          (simple_identifier)
          (call_suffix
            (value_arguments)))
        (line_comment)
        (call_expression
          (simple_identifier)
          (call_suffix
            (value_arguments)))
        (line_comment))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (lambda_literal
      (multiline_comment)))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (lambda_literal
      (multiline_comment)))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (lambda_literal
      (multiline_comment)
      (multiline_comment)
      (statements
        (property_declaration
          (binding_pattern_kind)
          (variable_declaration
            (simple_identifier))
          (integer_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (lambda_literal
      (multiline_comment)
      (multiline_comment)))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (multiline_comment)
    (lambda_literal
      (multiline_comment)
      (lambda_parameters
        (variable_declaration
          (simple_identifier)))
      (multiline_comment)
      (multiline_comment)))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (lambda_literal
      (multiline_comment)))
  (function_declaration
    (simple_identifier)
    (function_value_parameters)
    (function_body)))

==================
CommentsBindingInStatementBlock
==================

fun test() {
    if (true) {/*start-end*/}

    if (true) {
        /*start-end*/
    }

    if (true) {
        /*start*/
        /*end*/
    }

    if (true) {
        /*start*/

        /** doc */
        val a = 12

        /*end*/
    }
}

---

(source_file
  (function_declaration
    (simple_identifier)
    (function_value_parameters)
    (function_body
      (statements
        (if_expression
          condition: (boolean_literal)
          consequence: (control_structure_body
            (multiline_comment)))
        (if_expression
          condition: (boolean_literal)
          consequence: (control_structure_body
            (multiline_comment)))
        (if_expression
          condition: (boolean_literal)
          consequence: (control_structure_body
            (multiline_comment)
            (multiline_comment)))
        (if_expression
          condition: (boolean_literal)
          consequence: (control_structure_body
            (multiline_comment)
            (multiline_comment)
            (statements
              (property_declaration
                (binding_pattern_kind)
                (variable_declaration
                  (simple_identifier))
                (integer_literal))
              (multiline_comment))))))))

==================
classMembers
==================

package test

abstract class ClassMembers(private val p: Int, public open var p2: String, p3: Int, p4: Int = 10, final val p5: String = "aaa") {
    val foo = 3
    fun bar(): Int {
        return 3
    }

    open fun openFun() {
    }

    abstract fun abstractFun()

    open val openVal = 3

    abstract var abstractVar: Int
}

---

(source_file
  (package_header
    (identifier
      (simple_identifier)))
  (class_declaration
    (modifiers
      (inheritance_modifier))
    (type_identifier)
    (primary_constructor
      (class_parameter
        (modifiers
          (visibility_modifier))
        (binding_pattern_kind)
        (simple_identifier)
        (user_type
          (type_identifier)))
      (class_parameter
        (modifiers
          (visibility_modifier)
          (inheritance_modifier))
        (binding_pattern_kind)
        (simple_identifier)
        (user_type
          (type_identifier)))
      (class_parameter
        (simple_identifier)
        (user_type
          (type_identifier)))
      (class_parameter
        (simple_identifier)
        (user_type
          (type_identifier))
        (integer_literal))
      (class_parameter
        (modifiers
          (inheritance_modifier))
        (binding_pattern_kind)
        (simple_identifier)
        (user_type
          (type_identifier))
        (string_literal
          (string_content))))
    (class_body
      (property_declaration
        (binding_pattern_kind)
        (variable_declaration
          (simple_identifier))
        (integer_literal))
      (function_declaration
        (simple_identifier)
        (function_value_parameters)
        (user_type
          (type_identifier))
        (function_body
          (statements
            (jump_expression
              (integer_literal)))))
      (function_declaration
        (modifiers
          (inheritance_modifier))
        (simple_identifier)
        (function_value_parameters)
        (function_body))
      (function_declaration
        (modifiers
          (inheritance_modifier))
        (simple_identifier)
        (function_value_parameters))
      (property_declaration
        (modifiers
          (inheritance_modifier))
        (binding_pattern_kind)
        (variable_declaration
          (simple_identifier))
        (integer_literal))
      (property_declaration
        (modifiers
          (inheritance_modifier))
        (binding_pattern_kind)
        (variable_declaration
          (simple_identifier)
          (user_type
            (type_identifier)))))))

==================
classObject
==================

package test.class_object

class ClassObject {
    fun f() {
    }

    val c = 1

    public companion object {
        val j = 0
        fun z() = 0

        class A {
            class B {
                val i: Int = 0
                fun f() = 0
            }
        }
    }


    class B {
        companion object {
            class C {
                companion object {
                    class D {
                        companion object {
                            val i = 3
                            fun f() {
                            }

                            enum class En

                            annotation class Anno
                        }
                    }
                }
            }
        }
    }
}

---

(source_file
  (package_header
    (identifier
      (simple_identifier)
      (simple_identifier)))
  (class_declaration
    (type_identifier)
    (class_body
      (function_declaration
        (simple_identifier)
        (function_value_parameters)
        (function_body))
      (property_declaration
        (binding_pattern_kind)
        (variable_declaration
          (simple_identifier))
        (integer_literal))
      (companion_object
        (modifiers
          (visibility_modifier))
        (class_body
          (property_declaration
            (binding_pattern_kind)
            (variable_declaration
              (simple_identifier))
            (integer_literal))
          (function_declaration
            (simple_identifier)
            (function_value_parameters)
            (function_body
              (integer_literal)))
          (class_declaration
            (type_identifier)
            (class_body
              (class_declaration
                (type_identifier)
                (class_body
                  (property_declaration
                    (binding_pattern_kind)
                    (variable_declaration
                      (simple_identifier)
                      (user_type
                        (type_identifier)))
                    (integer_literal))
                  (function_declaration
                    (simple_identifier)
                    (function_value_parameters)
                    (function_body
                      (integer_literal)))))))))
      (class_declaration
        (type_identifier)
        (class_body
          (companion_object
            (class_body
              (class_declaration
                (type_identifier)
                (class_body
                  (companion_object
                    (class_body
                      (class_declaration
                        (type_identifier)
                        (class_body
                          (companion_object
                            (class_body
                              (property_declaration
                                (binding_pattern_kind)
                                (variable_declaration
                                  (simple_identifier))
                                (integer_literal))
                              (function_declaration
                                (simple_identifier)
                                (function_value_parameters)
                                (function_body))
                              (class_declaration
                                (type_identifier))
                              (class_declaration
                                (modifiers
                                  (class_modifier))
                                (type_identifier)))))))))))))))))

==================
complicateLTGT
==================

// COMPILATION_ERRORS

fun test(x: Int, y: Int) {
    if (x < (if (y > 115) 1 else 2)) {}
}

---

(source_file
  (line_comment)
  (function_declaration
    (simple_identifier)
    (function_value_parameters
      (parameter
        (simple_identifier)
        (user_type
          (type_identifier)))
      (parameter
        (simple_identifier)
        (user_type
          (type_identifier))))
    (function_body
      (statements
        (if_expression
          condition: (comparison_expression
            (simple_identifier)
            (parenthesized_expression
              (if_expression
                condition: (comparison_expression
                  (simple_identifier)
                  (integer_literal))
                consequence: (control_structure_body
                  (integer_literal))
                alternative: (control_structure_body
                  (integer_literal)))))
          consequence: (control_structure_body))))))

==================
complicateLTGTE
==================

fun test(x: Int, y: Int) {
    if (x < (if (y >= 115) 1 else 2)) {}
}

---

(source_file
  (function_declaration
    (simple_identifier)
    (function_value_parameters
      (parameter
        (simple_identifier)
        (user_type
          (type_identifier)))
      (parameter
        (simple_identifier)
        (user_type
          (type_identifier))))
    (function_body
      (statements
        (if_expression
          condition: (comparison_expression
            (simple_identifier)
            (parenthesized_expression
              (if_expression
                condition: (comparison_expression
                  (simple_identifier)
                  (integer_literal))
                consequence: (control_structure_body
                  (integer_literal))
                alternative: (control_structure_body
                  (integer_literal)))))
          consequence: (control_structure_body))))))

==================
const
==================

package test

object Const {
    const private val inObject = 1
}

---

(source_file
  (package_header
    (identifier
      (simple_identifier)))
  (object_declaration
    (type_identifier)
    (class_body
      (property_declaration
        (modifiers
          (property_modifier)
          (visibility_modifier))
        (binding_pattern_kind)
        (variable_declaration
          (simple_identifier))
        (integer_literal)))))

